# launcher-oss

./: .gitignore  CODEOWNERS  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  deploy.yml  on-commit.yml  on-pr.yml
src/: app.css  stores.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/proprietary_lib/: launcher_lib.lib
src-tauri/src/: main.rs
src-tauri/src/api/: endpoint.rs  mod.rs  requester.rs
src-tauri/src/api/moon/: auth.rs  download.rs  mod.rs
src-tauri/src/gui/: folder.rs  login.rs  mod.rs  settings.rs
src-tauri/src/proprietary/: mod.rs
src-tauri/src/storage/: location.rs  mod.rs  types.rs
src/lib/: Toggle.svelte
src/lib/Fonts/: Fonts.ts  FontsPreloads.svelte
src/lib/component/: Alert.svelte  Button.svelte  IconButton.svelte  Range.svelte  RedirectButton.svelte  Toggle.svelte
src/lib/fonts/: Fonts.svelte
src/lib/general/: SideBar.svelte  SidebarButton.svelte  SidebarRedirectionButton.svelte
src/lib/notif/: NotifHandler.ts  NotifHost.svelte  Notification.svelte  NotificationHandler.ts  RNG.ts
src/lib/notification/: NotifHost.svelte  Notification.svelte  NotificationContainer.svelte  NotificationHandler.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/launcher/: +page.svelte  ChannelCard.svelte
src/routes/launcher/about/: +page.svelte
src/routes/launcher/loading/: +page.svelte
src/routes/launcher/settings/: +page.svelte
