[package]
name = "moon-launcher"
version = "1.0.0"
description = "A launcher for Moon"
authors = ["lennox", "oad"]
license = "GPL-3.0"
repository = "https://github.com/moon-client/launcher-oss"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
directories = "5.0.1"
libloading = "0.8.0"
reqwest = "0.11.18"
tokio = "1.28.1"
sys-info = "0.9.1"
once_cell = "1.17.2"
open = "5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
